@@ -1,3 +1,9 @@
+2002-04-29  Matt Wilson  <msw@redhat.com>
+
+	* codegen/argtypes.py (ULongArg): implemented an argtype to handle
+	guint32 (on 32 bit platformas) and gulong arguments such that
+	large values (>MAX_INT on 32 bit platforms) don't overflow.
+
 2002-04-25  Matt Wilson  <msw@redhat.com>
 
 	* gtk/gtk.defs (gtk_spin_button_new): s/gbutton/gdouble/ from Art Haas.
